--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Authenticate Me</title>
+    <script src="https://kit.fontawesome.com/268b450481.js" crossorigin="anonymous"></script>
+    <title>scarebnb</title>
   </head>
   <body>
     <div id="root"></div>
